--- a/src/AudioBand/AudioBand.csproj
+++ b/src/AudioBand/AudioBand.csproj
@@ -124,6 +124,7 @@
     <Compile Include="Models\CustomLabel.cs" />
     <Compile Include="Models\Track.cs" />
     <Compile Include="NativeMethods.cs" />
+    <Compile Include="Resources\IResourceLoader.cs" />
     <Compile Include="Settings\IAppSettings.cs" />
     <Compile Include="Settings\Migrations\ISettingsMigrator.cs" />
     <Compile Include="Settings\Migrations\Migration.cs" />
